@@ -1,4 +1,8 @@
-Version 0-2-1 - 2012-05-13
+Version 0-2-3 - 2012-06-03
+Features:
+	* Limits for given kind of expence for given month
+
+Version 0-2-2 - 2012-05-13
 Features:
 	* Status per given month
 
